# DuoBoloLauncher2

./: Cargo.toml  README.md
.github/workflows/: releasebuild.yml  rust.yml
game/: DuoBoloEngine-aarch64-apple-darwin
game/assets/: Scene1.dbs
game/assets/assets/: Scene1.dbs
src/: achievements.js  common.js  create-account.js  index.html  index.js  login.js  main.html  main.js  matchmaking.js  playBtn.js  styles.css  userpage.js
src-tauri/: Cargo.toml  DuoBoloClient-86_64-unknown-linux-gnu  DuoBoloClient-aarch64-apple-darwin  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  endpoints.rs  lib.rs  main.rs  matchmaking.rs
src/assets/ui/matchmake_button/: find-match-button-active.webm  find-match-button-all-returned.webm  find-match-button-pulse.webm
