[package]
name = "DuoBoloLauncher"
version = "0.3.7"
description = "A Tauri App"
authors = ["Corentin Chrisment", "Theo Le Goc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "duobololauncher2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.15", features = ["json"] }
reqwest-websocket = "0.4.4"
aws-config = "1.6.1"
aws-sdk-cognitoidentityprovider = "1.75.0"
tokio = { version = "1.44.1", features = ["full"] }
tauri-plugin-websocket = "2"
futures-util = "0.3.31"
tauri-plugin-shell = "2"
